--- a/src/App.css
+++ b/src/App.css
@@ -41,16 +41,16 @@ li {
   list-style-type: none;
 }
 
-li span .delete-item {
+li span.delete-item {
   visibility: hidden;
 }
 
-span .delete-item a {
+span.delete-item a {
   text-decoration: none;
   color: red;
 }
 
-li:hover span .delete-item {
+li:hover span.delete-item {
   visibility: visible;
 }
 
@@ -61,4 +61,8 @@ li:hover span .delete-item {
 .Footer a {
   padding-left: 2px;
   padding-right: 2px;
+}
+
+.Footer a.active {
+  font-weight: bold;
 }
